UHF-2699: Fix issue with placeholder image being too wide on mobile

--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -454,7 +454,7 @@
   }
 
   .unit__image--placeholder {
-    width: calc(100% + #{$spacing-and-half} + #{$spacing-and-half});
+    width: 100%;
 
     @include breakpoint($breakpoint-m) {
       align-items: center;
